# sentiment-analysis-app

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
api/: sentiment_analysis.py
app/: app.py  prediction.py
models/: .gitignore
