[project]
name = "sentiment-analysis-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "joblib>=1.5.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.37.0",
]
